# Wordcloud_Youtube

./: .gitignore  README.md  pyproject.toml  transcript.txt
tests/: test_generate_wordcloud.py  test_get_subtitles.py  test_interface.py
wordcloud_youtube/: generate_wordcloud.py  get_subtitles.py  interface.py  main.py
